# Mikey_DiscordBot

./: .gitignore  Cargo.toml  README.md  Shuttle.toml  dummy_database.db
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
examples/: dummy_database.rs  external_chatting.rs  rich_embed.rs  slash_commands.rs  text_commands.rs
src/: lib.rs  main.rs
src/commands/: links.rs  mod.rs  rules.rs
src/email_mod/: Cargo.toml
src/email_mod/src/: lib.rs  main.rs
src/email_mod/src/email_commands/: discord_commands.rs  mod.rs
src/email_mod/src/entities/: person.rs
