[package]
name = "mikey"
version = "0.1.0"
edition = "2021"

authors = [
    "Adrian Zapien <adrian@zapien.dev>"
]

[dependencies]
serenity = "0.12"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15.7"
poise = "0.6.1"
rss = "2.0.9"
reqwest = "0.12.9"
email_mod = { path = "./src/email_mod" }
emailaddress = "0.4.0"
email_address = "0.2.9"
