[package]
name = "mikey"
version = "0.1.0"
edition = "2021"

authors = [
    "Adrian Zapien <adrian@zapien.dev>"
]

[dependencies]
serenity = "0.12"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15.7"
poise = "0.6.1"
rss = "2.0.9"
reqwest = "0.12.9"
axum = "0.7.4"
shuttle-serenity = "0.49.0"
shuttle-runtime = "0.49.0"


